# NLP_task

./: (Optional)_Deep_learning_approach_for_NLP.ipynb  Deep_learning_approach_for_NLP_(Optional).ipynb  README.md  app.py  end-to-end-IDBM-movie-review-classifier.ipynb  pyproject.toml  requirements.txt
model/: model.pkl  vectorizer.pkl
