[project]
name = "Movie_Review_Classifier"
version = "0.1.0"
description = "Take a review from the user and classify whether it is a positive or negative review."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
]
